example/advanced/hostnames-matchtype/3-gw-exact-route-exact-math-exact-nomatch/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-echo-http
spec:
  parentRefs:
  - name: hug-gateway
    sectionName: http
  - name: hug-gateway
    sectionName: https
  hostnames:
  - "nomatch.haproxy"
  rules:
  - matches:
    - path:
        type: Exact
        value: /api/
    backendRefs:
    - name: http-echo
      port: 80
---
